--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-run-test/
-target/
-
+.DS_Store
+*~
+*#
+*.o
+*.so
+*.swp
+*.dylib
+*.dSYM
+*.dll
+*.rlib
+*.dummy
+*.exe
+*-test
+/bin/main
+/bin/test-internal
+/bin/test-external
+/doc/
+/target/
+/build/
+/.rust/
+rusti.sh
+watch.sh
+/examples/**
+!/examples/*.rs
+!/examples/assets/
